# HeatherV2

./: .gitignore  .replit  =20.0  AUTHORIZATION_VS_TOKENIZATION.md  EXTRAPOLATOR_IMPROVEMENTS.md  EXTRAPOLATOR_V3_GUIDE.md  EXTRAPOLATOR_V3_IMPLEMENTATION.md  GATE_STATUS_REPORT.md  PAYMENT_INTENT_CONVERSION_STATUS.md  RAINBOWPONK_GATES.md  README_EXTRAPOLATOR_V3.md  REAL_PAYMENT_FLOWS_GUIDE.md  replit.md  requirements.txt
HeatherV888zip/: .replit  pyproject.toml  replit.md
HeatherV888zip/HeatherV2-2/: .gitignore  .replit  GATE_STATUS_REPORT.md  README.md  config.py  replit.md  requirements.txt
HeatherV888zip/attached_assets/: 1$stripeauto_1768632511820.py  3dchecker_1768632511821.py  Pasted-Mady-Bot-Codename-Heather-Telegram-Payment-Gateway-Bot-_1768631467366.txt  PayPal_Charge_1$_(1)_1768635605163.py  Pinta-3D_1768632511824.py  autochk_(1)_1768632511821.py  bot-b3_(1)_1768632511822.py  gatet_1768635570009.py  paypal5$_1768635600376.py
SRCAndMore/: .gitignore  config.py  metrics_collector.py  pyproject.toml  replit.md  start_bot.sh  transferto.py
SRCAndMore/deploy/: setup.sh
SRCAndMore/gates/: __init__.py  bellalliance_charge.py  braintree_auth.py  braintree_charge.py  braintree_graphql_real.py  braintree_vkrm.py  cache.py  cedine_auth.py  charge_stripe_wrapper.py  checkout_auth.py  circuit_breaker.py  corrigan_charge.py  health_checks.py  lions_club.py  pariyatti_auth.py  paypal_auth.py  paypal_charge.py  paypal_graphql_real.py  proxy_rotation.py  rainbowponk_adyen.py  rainbowponk_amazon.py  rainbowponk_paypal.py  rainbowponk_stripe.py  retry.py  shopify_nano.py  (+19 more)
(+211 files in other folders)
