[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "braintree>=4.41.0",
    "cloudscraper>=1.2.71",
    "faker>=40.1.2",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pycryptodome>=3.23.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "stripe>=14.2.0",
    "user-agent>=0.1.14",
]
